bonus/confs/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-external
  namespace: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30043
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
