bonus/confs/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
spec:
  rules:
  - host: gitlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default # Replace with your GitLab service name
            port:
              number: 8080 # Replace with your GitLab service port
